--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# stactools-gedi-calval-copc\n",
+    "# stactools-panama-copc\n",
     "\n",
     "This is a small notebook demonstrating use of this package and its generated items and collections.\n",
     "It is intended to be executed from the root of this repository, since it relies on files that have been checked into this repo."
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
     "from pathlib import Path\n",
     "from pystac import Collection, Item\n",
     "from IPython.display import display\n",
-    "import stactools.gedi_calval_copc.stac\n",
+    "import stactools.panama_copc.stac\n",
     "\n",
     "root = Path().cwd().parent\n",
     "collection = Collection.from_file(str(root / \"examples\" / \"collection.json\"))\n",
@@ -1595,8 +1595,8 @@
    ],
    "source": [
     "tif_path = root / \"tests\" / \"data\" / \"asset.tif\"\n",
-    "item = stactools.gedi_calval_copc.stac.create_item(str(tif_path))\n",
-    "collection = stactools.gedi_calval_copc.stac.create_collection()\n",
+    "item = stactools.panama_copc.stac.create_item(str(tif_path))\n",
+    "collection = stactools.panama_copc.stac.create_collection()\n",
     "collection.add_item(item)\n",
     "display(collection)"
    ]
